# CMPT433-Project

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: foo.h  organize.h  pwmDriver.h
app/src/: foo.c  main.c  organize.c  pwmDriver.c
hal/: CMakeLists.txt
hal/include/hal/: I2Cdev.h  MPU6050.h  distanceSensor.h  gyroscope.h  i2c_hal.h  joyStick.h  motor.h  pwm.h  sh2.h  sh2_SensorValue.h  shared.h  shtp.h  stm32f4xx_hal.h
hal/src/: I2Cdev.c  MPU6050.c  bno085Scrap  distanceSensor.c  euler.c  gyroscope.c  i2c_hal.c  joyStick.c  motor.c  mpuTest.c  pwm.c  sh2.c  sh2_SensorValue.c  sh2_util.c  shared.c  shtp.c  stm32f4xx_hal.c  stm32f4xx_hal_i2c.c  stm32f4xx_hal_tim.c
lib/BNO08X/: license.txt
lib/VL53L0X/: Makefile
